--- a/index.html
+++ b/index.html
@@ -29,6 +29,11 @@
                 <h1 class="about__title">Hello Git and Githup</h1>
             </div>
         </section>
+        <section class="box">
+            <div class="container">
+                <h1 class="box__title">Hello world</h1>
+            </div>
+        </section>
     </main>
 </body>
 </html>
